# claims.py

./: .gitignore  .versionrc.js  CHANGELOG.md  Makefile  Pipfile  README.md  setup.cfg  setup.py  standard-version-updater.js
claims/: __init__.py  ability.py  claim.py  claim_set.py  errors.py  parsing.py
tests/: test_ability.py  test_claim.py  test_claim_set.py
