# -----------------------------------------------------------------------------
# BUILDING WHEELS
# -----------------------------------------------------------------------------

[metadata]
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files =
    LICENSE.txt
    README.md

[bdist_wheel]
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
universal=0

# -----------------------------------------------------------------------------
# FORMATTING AND LINTING
# -----------------------------------------------------------------------------

[flake8]
ignore=E302,E501,W293,E261,E303,E226,E201,E127,E128,E202,E203,E231,E123,E122,W291,W503,Q000,D400,D401,D205
# flake8-use-fstring
percent-greedy = 0
format-greedy = 2

[isort]
# https://github.com/timothycrosley/isort#multi-line-output-modes
profile=black


[mypy]
# Untyped definitions and calls
# Disallows defining functions without type annotations or with
# incomplete type annotations.
disallow_untyped_defs = true
# Type-checks the interior of functions without type annotations
check_untyped_defs = true
# Import discovery
follow_imports = normal
ignore_missing_imports = True
# Warning configuration
warn_unused_ignores = true
warn_unreachable = true
# Error message config
# pretty = true

# -----------------------------------------------------------------------------
# TEST CONFIGURATION
# -----------------------------------------------------------------------------

[tool:pytest]
addopts = -p no:warnings
